--- a/Mobile/CellsNibs/RuneBodyTableViewCell.xib
+++ b/Mobile/CellsNibs/RuneBodyTableViewCell.xib
@@ -1,21 +1,116 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Beaufort-Bold.ttf">
+            <string>BeaufortforLOL-Bold</string>
+        </array>
+        <array key="Spiegel-Regular.ttf">
+            <string>Spiegel-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RuneBodyTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="91" id="KGk-i7-Jjw" customClass="RuneBodyTableViewCell" customModule="Forge_Wizard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="90.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="25z-Yg-Lvz">
+                        <rect key="frame" x="16" y="16" width="65" height="65"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j6t-ux-rAe">
+                                <rect key="frame" x="6" y="6" width="53" height="53"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isCircle" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.92941176470588238" green="0.011764705882352941" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="8112" translatesAutoresizingMaskIntoConstraints="NO" id="xp3-OJ-aCm">
+                                <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isCircle" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="65" id="4yA-i4-1ld"/>
+                            <constraint firstAttribute="height" constant="65" id="8TM-FQ-CPJ"/>
+                            <constraint firstAttribute="bottom" secondItem="j6t-ux-rAe" secondAttribute="bottom" constant="6" id="InG-7P-nOA"/>
+                            <constraint firstAttribute="trailing" secondItem="xp3-OJ-aCm" secondAttribute="trailing" id="IoV-e9-QGe"/>
+                            <constraint firstAttribute="trailing" secondItem="j6t-ux-rAe" secondAttribute="trailing" constant="6" id="JGu-3z-Txz"/>
+                            <constraint firstItem="xp3-OJ-aCm" firstAttribute="top" secondItem="25z-Yg-Lvz" secondAttribute="top" id="MQk-lR-ofr"/>
+                            <constraint firstItem="xp3-OJ-aCm" firstAttribute="leading" secondItem="25z-Yg-Lvz" secondAttribute="leading" id="OGt-GV-6ef"/>
+                            <constraint firstItem="j6t-ux-rAe" firstAttribute="leading" secondItem="25z-Yg-Lvz" secondAttribute="leading" constant="6" id="gNC-Tx-Way"/>
+                            <constraint firstItem="j6t-ux-rAe" firstAttribute="top" secondItem="25z-Yg-Lvz" secondAttribute="top" constant="6" id="qtB-Sb-iRv"/>
+                            <constraint firstAttribute="bottom" secondItem="xp3-OJ-aCm" secondAttribute="bottom" id="uSh-qK-jwq"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isCircle" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" red="0.92941176470588238" green="0.011764705882352941" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="ELECTROCUTE" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCV-KI-GKQ">
+                        <rect key="frame" x="97" y="26.5" width="185" height="20.5"/>
+                        <fontDescription key="fontDescription" name="BeaufortforLOL-Bold" family="BeaufortforLOL-Bold" pointSize="16"/>
+                        <color key="textColor" red="0.92941176469999998" green="0.01176470588" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="247" verticalHuggingPriority="247" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Hitting a champion with 3 separate attacks or abilities in 2s deals bonus adaptive damage." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QxR-kH-0j4">
+                        <rect key="frame" x="97" y="49.5" width="185" height="33.5"/>
+                        <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="11"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlayVideo" translatesAutoresizingMaskIntoConstraints="NO" id="SgF-UW-uSY">
+                        <rect key="frame" x="286" y="27" width="18" height="18"/>
+                    </imageView>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="SgF-UW-uSY" secondAttribute="trailing" constant="16" id="2Au-Nd-kns"/>
+                    <constraint firstItem="SgF-UW-uSY" firstAttribute="leading" secondItem="QxR-kH-0j4" secondAttribute="trailing" constant="4" id="5ar-f5-jvG"/>
+                    <constraint firstItem="bCV-KI-GKQ" firstAttribute="leading" secondItem="25z-Yg-Lvz" secondAttribute="trailing" constant="16" id="Aav-Ab-gu0"/>
+                    <constraint firstAttribute="bottom" secondItem="QxR-kH-0j4" secondAttribute="bottom" constant="8" id="Cos-u1-eRt"/>
+                    <constraint firstItem="25z-Yg-Lvz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="UEL-55-A2D"/>
+                    <constraint firstItem="SgF-UW-uSY" firstAttribute="centerY" secondItem="bCV-KI-GKQ" secondAttribute="centerY" id="UtA-7P-ZFP"/>
+                    <constraint firstItem="bCV-KI-GKQ" firstAttribute="centerY" secondItem="xp3-OJ-aCm" secondAttribute="centerY" constant="-12" id="a3i-dm-fiy"/>
+                    <constraint firstItem="QxR-kH-0j4" firstAttribute="leading" secondItem="25z-Yg-Lvz" secondAttribute="trailing" constant="16" id="bzb-OA-n7d"/>
+                    <constraint firstItem="25z-Yg-Lvz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="heA-1U-2LD"/>
+                    <constraint firstItem="QxR-kH-0j4" firstAttribute="top" secondItem="bCV-KI-GKQ" secondAttribute="bottom" constant="3" id="huB-qF-9ap"/>
+                    <constraint firstItem="SgF-UW-uSY" firstAttribute="leading" secondItem="bCV-KI-GKQ" secondAttribute="trailing" constant="4" id="wNV-6f-tuA"/>
+                </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="34" y="77.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="8112" width="256" height="256"/>
+        <image name="PlayVideo" width="18" height="18"/>
+    </resources>
 </document>
