--- a/Mobile/CellsNibs/RuneHeaderTableViewCell.xib
+++ b/Mobile/CellsNibs/RuneHeaderTableViewCell.xib
@@ -1,21 +1,92 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Beaufort-Bold.ttf">
+            <string>BeaufortforLOL-Bold</string>
+        </array>
+        <array key="Beaufort-Regular.ttf">
+            <string>BeaufortforLOL-Regular</string>
+        </array>
+        <array key="Spiegel-Regular.ttf">
+            <string>Spiegel-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RuneHeaderTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="106" id="KGk-i7-Jjw" customClass="RuneHeaderTableViewCell" customModule="Forge_Wizard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="106"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="105.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Domination + any secondary" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82B-7D-7iN">
+                        <rect key="frame" x="4" y="8" width="312" height="20.5"/>
+                        <fontDescription key="fontDescription" name="BeaufortforLOL-Bold" family="BeaufortforLOL-Bold" pointSize="16"/>
+                        <color key="textColor" red="0.92941176470588238" green="0.011764705882352941" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="247" verticalHuggingPriority="247" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EC5-v4-CSQ">
+                        <rect key="frame" x="4" y="36.5" width="312" height="18"/>
+                        <string key="text">+11 Attack Damage or +18 Ability Power, adaptive+11 Attack Damage or +18 Ability Power, adaptive+11 Attack Damage or +18 Ability Power, adaptive</string>
+                        <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="11"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UB2-TK-Huc">
+                        <rect key="frame" x="123.5" y="66.5" width="73" height="1"/>
+                        <color key="backgroundColor" red="1" green="0.9137254901960784" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="73" id="Fyk-SE-ufo"/>
+                            <constraint firstAttribute="height" constant="1" id="IXC-xk-Qzv"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="SELECT ONE OF THE FOLLOWING KEYSTONES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoa-Sq-Jt7">
+                        <rect key="frame" x="4" y="75.5" width="312" height="13"/>
+                        <fontDescription key="fontDescription" name="BeaufortforLOL-Regular" family="BeaufortforLOL-Regular" pointSize="10"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-An-8oQ">
+                        <rect key="frame" x="123" y="96.5" width="73" height="1"/>
+                        <color key="backgroundColor" red="1" green="0.91372549020000005" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="73" id="WqP-Tp-X3Y"/>
+                            <constraint firstAttribute="height" constant="1" id="pxc-CY-QfB"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstItem="UB2-TK-Huc" firstAttribute="centerX" secondItem="EC5-v4-CSQ" secondAttribute="centerX" id="Cbe-Qe-JRi"/>
+                    <constraint firstAttribute="trailing" secondItem="eoa-Sq-Jt7" secondAttribute="trailing" constant="4" id="Eyv-DM-Gk7"/>
+                    <constraint firstAttribute="bottom" secondItem="jfL-An-8oQ" secondAttribute="bottom" constant="8" id="Fda-WK-Njc"/>
+                    <constraint firstItem="EC5-v4-CSQ" firstAttribute="top" secondItem="82B-7D-7iN" secondAttribute="bottom" constant="8" id="Kdx-oX-ogs"/>
+                    <constraint firstItem="UB2-TK-Huc" firstAttribute="top" secondItem="EC5-v4-CSQ" secondAttribute="bottom" constant="12" id="MbJ-O2-w75"/>
+                    <constraint firstAttribute="trailing" secondItem="82B-7D-7iN" secondAttribute="trailing" constant="4" id="UGP-A3-AZc"/>
+                    <constraint firstItem="jfL-An-8oQ" firstAttribute="top" secondItem="eoa-Sq-Jt7" secondAttribute="bottom" constant="8" id="ZD8-an-gyg"/>
+                    <constraint firstItem="eoa-Sq-Jt7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="b8u-kU-U98"/>
+                    <constraint firstItem="jfL-An-8oQ" firstAttribute="centerX" secondItem="eoa-Sq-Jt7" secondAttribute="centerX" id="iKl-uT-7eu"/>
+                    <constraint firstAttribute="trailing" secondItem="EC5-v4-CSQ" secondAttribute="trailing" constant="4" id="meX-m4-8pn"/>
+                    <constraint firstItem="EC5-v4-CSQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="oG3-7i-6SI"/>
+                    <constraint firstItem="82B-7D-7iN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="xWc-dY-IbO"/>
+                    <constraint firstItem="82B-7D-7iN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="yXU-dm-Ujl"/>
+                    <constraint firstItem="eoa-Sq-Jt7" firstAttribute="top" secondItem="UB2-TK-Huc" secondAttribute="bottom" constant="8" id="zaq-D4-hiG"/>
+                </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="3" y="46"/>
         </tableViewCell>
     </objects>
 </document>
